style.css
body {
  font-family: 'Segoe UI', sans-serif;
  margin: 0;
  background: linear-gradient(135deg, #727277, #38bdf8);
  color: white;
  text-align: center;
}

header {
    
  padding: 60px 20px;
}

.profile {
  width: 150px;
  height: 150px;
  border-radius: 50%;
  border: 4px solid #38bdf8;
  transition: transform 0.3s;
}

.profile:hover {
  transform: scale(1.1);
}

h1 {
  background: linear-gradient(90deg, #c0c0c8, #38bdf8);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
}

h3 {
  font-size: 1.5rem;
  margin-bottom: 10px;
}

.learning {
  font-size: 0.9rem;
  color: #94a3b8;
}

p {
  color: #cbd5f5;
}

section {
  padding: 40px 20px;
}

.card {
  background: rgba(10, 10, 10, 0.1);
  backdrop-filter: blur(10px);
  border-radius: 15px;
  padding: 20px;
  margin: 30px auto;
  width: 80%;
  transition: 0.3s;
}

.card:hover {
  transform: translateY(-10px);
  box-shadow: 0 20px 40px rgba(0,0,0,0.3);
}

.project-img {
  width: 80%;
  border-radius: 10px;
  margin: 10px 0;
  cursor: pointer;
  transition: 0.3s;
}

.project-img:hover {
  transform: scale(1.05);
}

.project-gallery {
  display: flex;
  gap: 15px;
  justify-content: center;
  flex-wrap: wrap;
}

.project-gallery img {
  width: 200px;        /* fixed size */
  height: 140px;
  object-fit: cover;   /* keeps image proper */
  border-radius: 10px;
  cursor: pointer;
  transition: 0.3s;
}

.project-gallery img:hover {
  transform: scale(1.1);
  box-shadow: 0 10px 20px rgba(0,0,0,0.5);
}

.btn {
  padding: 10px 20px;
  background: linear-gradient(90deg, #6366f1, #38bdf8);
  color: white;
  border-radius: 6px;
  text-decoration: none;
  transition: 0.3s;
}

.btn:hover {
  opacity: 0.85;
}

.img-box {
  overflow: hidden;
  border-radius: 10px;
}

.img-box img {
  width: 200px;
  height: 140px;
  object-fit: cover;
  transition: 0.4s;
}

.img-box:hover img {
  transform: scale(1.2);
}

.tags {
  color: #38bdf8;
  font-size: 0.9rem;
  margin-bottom: 10px;
}

.navbar {
  display: flex;
  justify-content: space-between;
  padding: 15px 30px;
  background: rgba(0,0,0,0.7);
  backdrop-filter: blur(10px);
  position: sticky;
  top: 0;
}

.nav-links {
  display: flex;
  list-style: none;
  gap: 20px;
}

.nav-links a {
  color: white;
  text-decoration: none;
  transition: 0.3s;
}

.nav-links a:hover {
  color: #38bdf8;
}

html {
  scroll-behavior: smooth;
}

#loader {
  position: fixed;
  width: 100%;
  height: 100vh;
  background: #0f172a;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 999;
}

.spinner {
  width: 50px;
  height: 50px;
  border: 5px solid #1e293b;
  border-top: 5px solid #38bdf8;
  border-radius: 50%;
  animation: spin 1s linear infinite;
}

@keyframes spin {
  100% {
    transform: rotate(360deg);
  }
}

#resume {
  padding: 40px 20px;
  text-align: center;
}

